--- a/src/components/CaseStudy/_Header.scss
+++ b/src/components/CaseStudy/_Header.scss
@@ -1,5 +1,5 @@
 .header {
-  height: 70vh;
+  height: 100vh;
   
   &-title {
     padding: 0 $spacing-xs;
@@ -19,12 +19,9 @@
 
     .img {
       width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
-  }
-  
-  // Mobile - landscape
-  @media screen and (min-width: 568px) {
-    height: 100vh;
   }
 
   @media screen and (min-width: 768px) {
