--- a/src/components/CaseStudy/_Header.scss
+++ b/src/components/CaseStudy/_Header.scss
@@ -47,3 +47,16 @@
     }
   }
 }
+
+.bcito .header .img-block {
+  background: linear-gradient(90deg, rgba(206,216,227,1) 0%, rgba(201,210,224,1) 100%);
+
+  @media screen and (min-width: 1024px) {
+    .img {
+      margin: 0 auto;
+      display: block;
+      width: auto;
+      height: 100%;
+    }
+  }
+}
