--- a/src/components/LandingPage/_LandingPage.scss
+++ b/src/components/LandingPage/_LandingPage.scss
@@ -57,6 +57,7 @@
       max-width: 88rem;
       width: 100%;
       height: 100%;
+      overflow: hidden; // For Safari who renders height differently (this element (the parent) requires a fixed height rather than a percentage)
     }
 
     &-text {
