--- a/src/styles/_custom.scss
+++ b/src/styles/_custom.scss
@@ -3,7 +3,7 @@
   min-height: 100vh;
 
   &-info {
-    padding: $spacing-l $spacing-xs;
+    padding: $spacing-l $spacing-xs $spacing-xs;
   }
 
   h1 {
@@ -18,7 +18,7 @@
     margin-bottom: $spacing-xs / 2;
 
     &:last-of-type {
-      margin-bottom: 0;
+      margin-bottom: $spacing-xs;
     }
   }
 
@@ -26,7 +26,7 @@
     font-size: 2rem;
   }
 
-  .btn {
+  .link {
     margin-bottom: $spacing-xs;
     display: inline-block;
   }
