--- a/src/components/CaseStudy/_Context.scss
+++ b/src/components/CaseStudy/_Context.scss
@@ -23,34 +23,40 @@
   }
 
   @media screen and (min-width: 568px) {
+    display: -ms-grid;
     display: grid;
+    -ms-grid-columns: 1fr 1fr;
     grid-template-columns: 1fr 1fr;
     grid-gap: 0 $spacing-xs;
 
-    &-title {
-      grid-column: span 2;
-    }
-
+    &-title,
     &-about {
+      -ms-grid-column-span: 2;
       grid-column: span 2;
     }
 
     .col-2 {
+      -ms-grid-column-span: 2;
       grid-column: 1 / span 2;
     }
   }
 
   @media screen and (min-width: 768px) {
+    -ms-grid-columns: 1fr 1fr 1fr;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: $spacing-xs;
 
     &-title {
+      -ms-grid-row-span: 3;
       grid-row: 1 / span 3;
+      -ms-grid-column-span: 1;
       grid-column: span 1;
     }
 
     &-about {
       margin-bottom: 0;
+      -ms-grid-column: 2;
+      -ms-grid-column-span: 2;
       grid-column: 2 / span 2;
     }
 
@@ -59,6 +65,8 @@
     }
 
     .col-2 {
+      -ms-grid-column: 2;
+      -ms-grid-column-span: 2;
       grid-column: 2 / span 2;
     }
   }
