--- a/src/components/CaseStudy/_Header.scss
+++ b/src/components/CaseStudy/_Header.scss
@@ -1,62 +1,60 @@
 .header {
   height: 100vh;
-  
-  &-title {
-    padding: 0 $spacing-xs;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-content: center;
-    height: 35%;
-    color: $black;
-  }
-  
-  .img-block {
-    position: relative;
-    height: 65%;
-    width: 100%;
-    overflow: hidden;
-
-    .img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-  }
-
-  @media screen and (min-width: 768px) {
-    &-title {
-      padding-left: 5rem;
-    }
-  }
-  
-  // iPad portrait
-  @media screen and (min-width: 768px) and (min-height: 1024px) {
-    height: 50vh;
-  }
-  
-  @media screen and (min-width: 1024px) {
-    height: 100vh;
-
-    &-title {
-      height: 45%;
-    }
-
-    .img-block {
-      height: 55%;
-    }
-  }
 }
 
-.bcito .header .img-block {
-  background: linear-gradient(90deg, rgba(206,216,227,1) 0%, rgba(201,210,224,1) 100%);
+.header__title {
+  padding: 0 $spacing-xs;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  height: 35%;
+  color: $black;
+}
+  
+.header__visual {
+  position: relative;
+  height: 65%;
+  width: 100%;
+  overflow: hidden;
+}
 
-  @media screen and (min-width: 1024px) {
-    .img {
-      margin: 0 auto;
-      display: block;
-      width: auto;
-      height: 100%;
-    }
+.header__img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+@media screen and (min-width: 768px) {
+  .header__title {
+    padding-left: 5rem;
+  }
+}
+  
+// iPad portrait
+@media screen and (min-width: 768px) and (min-height: 1024px) {
+  .header {
+    height: 50vh;
+  }
+}
+  
+@media screen and (min-width: 1024px) {
+  .header {
+    height: 100vh;
+  }
+
+  .header__title {
+    height: 45%;
+  }
+
+  .header__visual {
+    height: 55%;
+  }
+
+  .bcito .header__img {
+    margin: 0 auto;
+    display: block;
+    width: auto;
+    height: 100%;
   }
 }
